syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.ot4";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";

package br.com.zup.ot4;

service KeyManagerService {
  rpc registrar(ChavePixRequest) returns (ChavePixResponse) {}
}

enum TipoChave {
  TIPO_CHAVE_DESCONHECIDO = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta {
  TIPO_CONTA_DESCONHECIDO = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message ChavePixRequest {
  string idExternoCliente = 1;
  string chavePix = 2;
  TipoChave tipoChave = 3;
  TipoConta tipoConta = 4;
}

message ChavePixResponse {
  string pixId = 1;
}